--- a/css/style.css
+++ b/css/style.css
@@ -1103,6 +1103,10 @@ h1.works  {
         font-size: medium;
     }
 
+    .links ul li a.active {
+        border-bottom: 2px solid white;
+    }
+
     .bi-x{
         font-size: 30px;
         font-weight: bolder;
